varnish-macros/snapshots/docs_types@json.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
VMOD_JSON_SPEC
[
  [
    "$VMOD",
    "1.0",
    "types",
    "Vmod_vmod_types_Func",
    "dc6571c10aa0083a83d0ea0cef4845b8dd72a9ec066a8915c151ef01039eccca",
    "Varnish (version) (hash)",
    "0",
    "0"
  ],
  [
    "$CPROTO",
    "
struct vmod_types_DocStruct;

typedef VCL_VOID td_vmod_types_with_docs(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_no_docs(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_doctest(
    VRT_CTX,
    VCL_INT,
    VCL_INT
);

typedef VCL_VOID td_vmod_types_arg_only(
    VRT_CTX,
    VCL_INT
);

struct arg_vmod_types_DocStruct__init {
  char valid_cap;
  VCL_INT cap;
};

typedef VCL_VOID td_vmod_types_DocStruct__init(
    VRT_CTX,
    struct vmod_types_DocStruct **,
    const char *,
    struct arg_vmod_types_DocStruct__init *
);

typedef VCL_VOID td_vmod_types_DocStruct__fini(
    struct vmod_types_DocStruct **
);

typedef VCL_VOID td_vmod_types_DocStruct_function(
    VRT_CTX,
    struct vmod_types_DocStruct *,
    VCL_STRING
);

struct Vmod_vmod_types_Func {
  td_vmod_types_with_docs *f_with_docs;
  td_vmod_types_no_docs *f_no_docs;
  td_vmod_types_doctest *f_doctest;
  td_vmod_types_arg_only *f_arg_only;
  td_vmod_types_DocStruct__init *f_DocStruct__init;
  td_vmod_types_DocStruct__fini *f_DocStruct__fini;
  td_vmod_types_DocStruct_function *f_DocStruct_function;
};

static struct Vmod_vmod_types_Func Vmod_vmod_types_Func;"
  ],
  [
    "$FUNC",
    "with_docs",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_with_docs",
      ""
    ]
  ],
  [
    "$FUNC",
    "no_docs",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_no_docs",
      ""
    ]
  ],
  [
    "$FUNC",
    "doctest",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_doctest",
      "",
      [
        "INT",
        "_no_docs"
      ],
      [
        "INT",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "arg_only",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_arg_only",
      "",
      [
        "INT",
        "_v"
      ]
    ]
  ],
  [
    "$OBJ",
    "DocStruct",
    {
      "NULL_OK": false
    },
    "struct vmod_types_DocStruct",
    [
      "$INIT",
      [
        [
          "VOID"
        ],
        "Vmod_vmod_types_Func.f_DocStruct__init",
        "struct arg_vmod_types_DocStruct__init",
        [
          "INT",
          "cap",
          null,
          null,
          true
        ]
      ]
    ],
    [
      "$FINI",
      [
        [
          "VOID"
        ],
        "Vmod_vmod_types_Func.f_DocStruct__fini",
        ""
      ]
    ],
    [
      "$METHOD",
      "function",
      [
        [
          "VOID"
        ],
        "Vmod_vmod_types_Func.f_DocStruct_function",
        "",
        [
          "STRING",
          "key"
        ]
      ]
    ]
  ]
]

