varnish-macros/snapshots/event1_event@json.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
VMOD_JSON_SPEC
[
  [
    "$VMOD",
    "1.0",
    "event",
    "Vmod_vmod_event_Func",
    "236bb2dca1b1eace445c94ec3359c72a55ac3d55adfe314171e8fbe841bbb9b4",
    "Varnish (version) (hash)",
    "0",
    "0"
  ],
  [
    "$CPROTO",
    "
struct Vmod_vmod_event_Func {
  vmod_event_f *f_on_event;
};

static struct Vmod_vmod_event_Func Vmod_vmod_event_Func;"
  ],
  [
    "$EVENT",
    "Vmod_vmod_event_Func.f_on_event"
  ]
]

