varnish-macros/snapshots/event2_event2@model.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
VmodInfo {
    params: VmodParams {
        docs: None,
    },
    ident: "event2",
    docs: "",
    funcs: [
        FuncInfo {
            func_type: Event,
            ident: "on_event",
            docs: "",
            has_optional_args: false,
            args: [
                ParamTypeInfo {
                    ident: "ctx",
                    docs: "",
                    idx: 0,
                    ty: Context {
                        is_mut: false,
                    },
                },
                ParamTypeInfo {
                    ident: "event",
                    docs: "",
                    idx: 1,
                    ty: Event,
                },
            ],
            output_ty: Default,
            out_result: true,
        },
    ],
    objects: [],
    shared_types: SharedTypes {
        shared_per_task_ty: None,
        shared_per_vcl_ty: None,
    },
}
