varnish-macros/snapshots/function_types@docs.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `types`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import types;

// Or load vmod from a specific file
import types from "path/to/libtypes.so";
```

### Function `VOID to_void()`

### Function `VOID to_res_void_err()`

### Function `VOID to_res_str_err()`

### Function `VOID type_bool(BOOL _v)`

### Function `VOID type_bool_dflt(BOOL _v = 1)`

### Function `VOID opt_bool([BOOL _v])`

### Function `BOOL to_bool()`

### Function `BOOL to_res_bool()`

### Function `VOID type_duration(DURATION _v)`

### Function `VOID opt_duration([DURATION _v])`

### Function `DURATION to_duration()`

### Function `DURATION to_res_duration()`

### Function `VOID type_f64(REAL _v)`

### Function `VOID type_f64_dflt(REAL _v = 42.3)`

### Function `VOID opt_f64([REAL _v])`

### Function `REAL to_f64()`

### Function `REAL to_res_f64()`

### Function `VOID type_i64(INT _v)`

### Function `VOID type_i64_dflt(INT _v = 10)`

### Function `VOID opt_i64([INT _v])`

### Function `INT to_i64()`

### Function `INT to_res_i64()`

### Function `VOID type_str(STRING _v)`

### Function `VOID opt_str([STRING _v])`

### Function `VOID type_str_dflt(STRING _v = "baz")`

### Function `VOID opt_str_dflt([STRING _v] = "baz")`

### Function `STRING to_str()`

### Function `STRING to_res_str()`

### Function `STRING to_string()`

### Function `STRING to_opt_string()`

### Function `STRING to_res_string()`

### Function `STRING to_res_opt_string()`

### Function `VOID type_probe([PROBE _v])`

### Function `VOID type_probe_req(PROBE _v)`

### Function `PROBE to_probe()`

### Function `PROBE to_res_probe()`

### Function `VOID type_cow_probe([PROBE _v])`

### Function `VOID type_cow_probe_req(PROBE _v)`

### Function `PROBE to_cow_probe()`

### Function `PROBE to_res_cow_probe()`

### Function `VOID type_ip([IP _v])`

### Function `VOID type_ip_req(IP _v)`

### Function `IP to_ip()`

### Function `IP to_res_ip()`

### Function `STRING to_vcl_string()`

### Function `STRING to_res_vcl_string()`

### Function `STRING opt_i64_opt_i64(INT a1, [INT a2], INT a3)`

### Function `VOID get_ws_mut()`

### Function `VOID get_ws_ref()`
