varnish-macros/snapshots/function_types@json.snap
---
source: varnish-macros/src/tests.rs
---
VMOD_JSON_SPEC
[
  [
    "$VMOD",
    "1.0",
    "types",
    "Vmod_vmod_types_Func",
    "1c2cdf6132656abca6306ecb8a411627196cccacf06ba1f26312cb3ffc273e11",
    "Varnish (version) (hash)",
    "0",
    "0"
  ],
  [
    "$CPROTO",
    "
typedef VCL_VOID td_vmod_types_to_void(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_to_res_void_err(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_to_res_str_err(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_type_bool(
    VRT_CTX,
    VCL_BOOL
);

typedef VCL_VOID td_vmod_types_type_bool_dflt(
    VRT_CTX,
    VCL_BOOL
);

struct arg_vmod_types_opt_bool {
  char valid__v;
  VCL_BOOL _v;
};

typedef VCL_VOID td_vmod_types_opt_bool(
    VRT_CTX,
    struct arg_vmod_types_opt_bool *
);

typedef VCL_BOOL td_vmod_types_to_bool(
    VRT_CTX
);

typedef VCL_BOOL td_vmod_types_to_res_bool(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_type_duration(
    VRT_CTX,
    VCL_DURATION
);

struct arg_vmod_types_opt_duration {
  char valid__v;
  VCL_DURATION _v;
};

typedef VCL_VOID td_vmod_types_opt_duration(
    VRT_CTX,
    struct arg_vmod_types_opt_duration *
);

typedef VCL_DURATION td_vmod_types_to_duration(
    VRT_CTX
);

typedef VCL_DURATION td_vmod_types_to_res_duration(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_type_f64(
    VRT_CTX,
    VCL_REAL
);

typedef VCL_VOID td_vmod_types_type_f64_dflt(
    VRT_CTX,
    VCL_REAL
);

struct arg_vmod_types_opt_f64 {
  char valid__v;
  VCL_REAL _v;
};

typedef VCL_VOID td_vmod_types_opt_f64(
    VRT_CTX,
    struct arg_vmod_types_opt_f64 *
);

typedef VCL_REAL td_vmod_types_to_f64(
    VRT_CTX
);

typedef VCL_REAL td_vmod_types_to_res_f64(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_type_i64(
    VRT_CTX,
    VCL_INT
);

typedef VCL_VOID td_vmod_types_type_i64_dflt(
    VRT_CTX,
    VCL_INT
);

struct arg_vmod_types_opt_i64 {
  char valid__v;
  VCL_INT _v;
};

typedef VCL_VOID td_vmod_types_opt_i64(
    VRT_CTX,
    struct arg_vmod_types_opt_i64 *
);

typedef VCL_INT td_vmod_types_to_i64(
    VRT_CTX
);

typedef VCL_INT td_vmod_types_to_res_i64(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_type_str(
    VRT_CTX,
    VCL_STRING
);

struct arg_vmod_types_opt_str {
  char valid__v;
  VCL_STRING _v;
};

typedef VCL_VOID td_vmod_types_opt_str(
    VRT_CTX,
    struct arg_vmod_types_opt_str *
);

typedef VCL_VOID td_vmod_types_type_str_dflt(
    VRT_CTX,
    VCL_STRING
);

struct arg_vmod_types_opt_str_dflt {
  char valid__v;
  VCL_STRING _v;
};

typedef VCL_VOID td_vmod_types_opt_str_dflt(
    VRT_CTX,
    struct arg_vmod_types_opt_str_dflt *
);

typedef VCL_STRING td_vmod_types_to_str(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_res_str(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_string(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_opt_string(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_res_string(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_res_opt_string(
    VRT_CTX
);

struct arg_vmod_types_type_probe {
  char valid__v;
  VCL_PROBE _v;
};

typedef VCL_VOID td_vmod_types_type_probe(
    VRT_CTX,
    struct arg_vmod_types_type_probe *
);

typedef VCL_VOID td_vmod_types_type_probe_req(
    VRT_CTX,
    VCL_PROBE
);

typedef VCL_PROBE td_vmod_types_to_probe(
    VRT_CTX
);

typedef VCL_PROBE td_vmod_types_to_res_probe(
    VRT_CTX
);

struct arg_vmod_types_type_cow_probe {
  char valid__v;
  VCL_PROBE _v;
};

typedef VCL_VOID td_vmod_types_type_cow_probe(
    VRT_CTX,
    struct arg_vmod_types_type_cow_probe *
);

typedef VCL_VOID td_vmod_types_type_cow_probe_req(
    VRT_CTX,
    VCL_PROBE
);

typedef VCL_PROBE td_vmod_types_to_cow_probe(
    VRT_CTX
);

typedef VCL_PROBE td_vmod_types_to_res_cow_probe(
    VRT_CTX
);

struct arg_vmod_types_type_ip {
  char valid__v;
  VCL_IP _v;
};

typedef VCL_VOID td_vmod_types_type_ip(
    VRT_CTX,
    struct arg_vmod_types_type_ip *
);

typedef VCL_VOID td_vmod_types_type_ip_req(
    VRT_CTX,
    VCL_IP
);

typedef VCL_IP td_vmod_types_to_ip(
    VRT_CTX
);

typedef VCL_IP td_vmod_types_to_res_ip(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_vcl_string(
    VRT_CTX
);

typedef VCL_STRING td_vmod_types_to_res_vcl_string(
    VRT_CTX
);

struct arg_vmod_types_opt_i64_opt_i64 {
  VCL_INT a1;
  char valid_a2;
  VCL_INT a2;
  VCL_INT a3;
};

typedef VCL_STRING td_vmod_types_opt_i64_opt_i64(
    VRT_CTX,
    struct arg_vmod_types_opt_i64_opt_i64 *
);

typedef VCL_VOID td_vmod_types_get_ws_mut(
    VRT_CTX
);

typedef VCL_VOID td_vmod_types_get_ws_ref(
    VRT_CTX
);

struct Vmod_vmod_types_Func {
  td_vmod_types_to_void *f_to_void;
  td_vmod_types_to_res_void_err *f_to_res_void_err;
  td_vmod_types_to_res_str_err *f_to_res_str_err;
  td_vmod_types_type_bool *f_type_bool;
  td_vmod_types_type_bool_dflt *f_type_bool_dflt;
  td_vmod_types_opt_bool *f_opt_bool;
  td_vmod_types_to_bool *f_to_bool;
  td_vmod_types_to_res_bool *f_to_res_bool;
  td_vmod_types_type_duration *f_type_duration;
  td_vmod_types_opt_duration *f_opt_duration;
  td_vmod_types_to_duration *f_to_duration;
  td_vmod_types_to_res_duration *f_to_res_duration;
  td_vmod_types_type_f64 *f_type_f64;
  td_vmod_types_type_f64_dflt *f_type_f64_dflt;
  td_vmod_types_opt_f64 *f_opt_f64;
  td_vmod_types_to_f64 *f_to_f64;
  td_vmod_types_to_res_f64 *f_to_res_f64;
  td_vmod_types_type_i64 *f_type_i64;
  td_vmod_types_type_i64_dflt *f_type_i64_dflt;
  td_vmod_types_opt_i64 *f_opt_i64;
  td_vmod_types_to_i64 *f_to_i64;
  td_vmod_types_to_res_i64 *f_to_res_i64;
  td_vmod_types_type_str *f_type_str;
  td_vmod_types_opt_str *f_opt_str;
  td_vmod_types_type_str_dflt *f_type_str_dflt;
  td_vmod_types_opt_str_dflt *f_opt_str_dflt;
  td_vmod_types_to_str *f_to_str;
  td_vmod_types_to_res_str *f_to_res_str;
  td_vmod_types_to_string *f_to_string;
  td_vmod_types_to_opt_string *f_to_opt_string;
  td_vmod_types_to_res_string *f_to_res_string;
  td_vmod_types_to_res_opt_string *f_to_res_opt_string;
  td_vmod_types_type_probe *f_type_probe;
  td_vmod_types_type_probe_req *f_type_probe_req;
  td_vmod_types_to_probe *f_to_probe;
  td_vmod_types_to_res_probe *f_to_res_probe;
  td_vmod_types_type_cow_probe *f_type_cow_probe;
  td_vmod_types_type_cow_probe_req *f_type_cow_probe_req;
  td_vmod_types_to_cow_probe *f_to_cow_probe;
  td_vmod_types_to_res_cow_probe *f_to_res_cow_probe;
  td_vmod_types_type_ip *f_type_ip;
  td_vmod_types_type_ip_req *f_type_ip_req;
  td_vmod_types_to_ip *f_to_ip;
  td_vmod_types_to_res_ip *f_to_res_ip;
  td_vmod_types_to_vcl_string *f_to_vcl_string;
  td_vmod_types_to_res_vcl_string *f_to_res_vcl_string;
  td_vmod_types_opt_i64_opt_i64 *f_opt_i64_opt_i64;
  td_vmod_types_get_ws_mut *f_get_ws_mut;
  td_vmod_types_get_ws_ref *f_get_ws_ref;
};

static struct Vmod_vmod_types_Func Vmod_vmod_types_Func;"
  ],
  [
    "$FUNC",
    "to_void",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_to_void",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_void_err",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_to_res_void_err",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_str_err",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_to_res_str_err",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_bool",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_bool",
      "",
      [
        "BOOL",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "type_bool_dflt",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_bool_dflt",
      "",
      [
        "BOOL",
        "_v",
        "1"
      ]
    ]
  ],
  [
    "$FUNC",
    "opt_bool",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_opt_bool",
      "struct arg_vmod_types_opt_bool",
      [
        "BOOL",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "to_bool",
    [
      [
        "BOOL"
      ],
      "Vmod_vmod_types_Func.f_to_bool",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_bool",
    [
      [
        "BOOL"
      ],
      "Vmod_vmod_types_Func.f_to_res_bool",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_duration",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_duration",
      "",
      [
        "DURATION",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "opt_duration",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_opt_duration",
      "struct arg_vmod_types_opt_duration",
      [
        "DURATION",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "to_duration",
    [
      [
        "DURATION"
      ],
      "Vmod_vmod_types_Func.f_to_duration",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_duration",
    [
      [
        "DURATION"
      ],
      "Vmod_vmod_types_Func.f_to_res_duration",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_f64",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_f64",
      "",
      [
        "REAL",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "type_f64_dflt",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_f64_dflt",
      "",
      [
        "REAL",
        "_v",
        "42.3"
      ]
    ]
  ],
  [
    "$FUNC",
    "opt_f64",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_opt_f64",
      "struct arg_vmod_types_opt_f64",
      [
        "REAL",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "to_f64",
    [
      [
        "REAL"
      ],
      "Vmod_vmod_types_Func.f_to_f64",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_f64",
    [
      [
        "REAL"
      ],
      "Vmod_vmod_types_Func.f_to_res_f64",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_i64",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_i64",
      "",
      [
        "INT",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "type_i64_dflt",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_i64_dflt",
      "",
      [
        "INT",
        "_v",
        "10"
      ]
    ]
  ],
  [
    "$FUNC",
    "opt_i64",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_opt_i64",
      "struct arg_vmod_types_opt_i64",
      [
        "INT",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "to_i64",
    [
      [
        "INT"
      ],
      "Vmod_vmod_types_Func.f_to_i64",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_i64",
    [
      [
        "INT"
      ],
      "Vmod_vmod_types_Func.f_to_res_i64",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_str",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_str",
      "",
      [
        "STRING",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "opt_str",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_opt_str",
      "struct arg_vmod_types_opt_str",
      [
        "STRING",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "type_str_dflt",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_str_dflt",
      "",
      [
        "STRING",
        "_v",
        "\"baz\""
      ]
    ]
  ],
  [
    "$FUNC",
    "opt_str_dflt",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_opt_str_dflt",
      "struct arg_vmod_types_opt_str_dflt",
      [
        "STRING",
        "_v",
        "\"baz\"",
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "to_str",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_str",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_str",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_res_str",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_string",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_string",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_opt_string",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_opt_string",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_string",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_res_string",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_opt_string",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_res_opt_string",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_probe",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_probe",
      "struct arg_vmod_types_type_probe",
      [
        "PROBE",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "type_probe_req",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_probe_req",
      "",
      [
        "PROBE",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "to_probe",
    [
      [
        "PROBE"
      ],
      "Vmod_vmod_types_Func.f_to_probe",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_probe",
    [
      [
        "PROBE"
      ],
      "Vmod_vmod_types_Func.f_to_res_probe",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_cow_probe",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_cow_probe",
      "struct arg_vmod_types_type_cow_probe",
      [
        "PROBE",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "type_cow_probe_req",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_cow_probe_req",
      "",
      [
        "PROBE",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "to_cow_probe",
    [
      [
        "PROBE"
      ],
      "Vmod_vmod_types_Func.f_to_cow_probe",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_cow_probe",
    [
      [
        "PROBE"
      ],
      "Vmod_vmod_types_Func.f_to_res_cow_probe",
      ""
    ]
  ],
  [
    "$FUNC",
    "type_ip",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_ip",
      "struct arg_vmod_types_type_ip",
      [
        "IP",
        "_v",
        null,
        null,
        true
      ]
    ]
  ],
  [
    "$FUNC",
    "type_ip_req",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_type_ip_req",
      "",
      [
        "IP",
        "_v"
      ]
    ]
  ],
  [
    "$FUNC",
    "to_ip",
    [
      [
        "IP"
      ],
      "Vmod_vmod_types_Func.f_to_ip",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_ip",
    [
      [
        "IP"
      ],
      "Vmod_vmod_types_Func.f_to_res_ip",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_vcl_string",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_vcl_string",
      ""
    ]
  ],
  [
    "$FUNC",
    "to_res_vcl_string",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_to_res_vcl_string",
      ""
    ]
  ],
  [
    "$FUNC",
    "opt_i64_opt_i64",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_types_Func.f_opt_i64_opt_i64",
      "struct arg_vmod_types_opt_i64_opt_i64",
      [
        "INT",
        "a1"
      ],
      [
        "INT",
        "a2",
        null,
        null,
        true
      ],
      [
        "INT",
        "a3"
      ]
    ]
  ],
  [
    "$FUNC",
    "get_ws_mut",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_get_ws_mut",
      ""
    ]
  ],
  [
    "$FUNC",
    "get_ws_ref",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_types_Func.f_get_ws_ref",
      ""
    ]
  ]
]

