varnish-macros/snapshots/object_obj@docs.snap
---
source: varnish-macros/src/tests.rs
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `obj`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import obj;

// Or load vmod from a specific file
import obj from "path/to/libobj.so";
```

### Object `kv1`

```vcl
// Create a new instance of the object in your VCL init function
sub vcl_init {
    new new = kv1.new([INT cap]);
}
```

#### Method `VOID set(STRING key, STRING value)`

#### Method `STRING get(STRING key)`

### Object `kv2`

```vcl
// Create a new instance of the object in your VCL init function
sub vcl_init {
    new new = kv2.new([INT cap]);
}
```

#### Method `VOID set(STRING key, [STRING value])`
